# lpb_gck

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  imgui.ini
dependencies/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: interpolation.hpp  inverse_kinematics.hpp  jog_controller.hpp  trapezoidal_ramp.hpp  virtual_gearbox.hpp
lib/src/: CMakeLists.txt  inverse_kinematics.cpp  jog_controller.cpp  trapezoidal_ramp.cpp  virtual_gearbox.cpp
proto/: gui_types.proto
safefiles/: ik_test.bytes  ik_test.ini
sim/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  ImGuiFileDialog.cpp  app.rs  imgui-logging.h  imgui.ini  main.cpp  main.rs  node_editor.h  save_load.cpp
src/trajectory_planer/: trajectory_planer.cpp  trajectory_planer.hpp
test/: CMakeLists.txt  forward_kinematics_test.cpp  inverse_kinematics_test.cpp  jog_operation_test.cpp  trapezoidal_ramp_test.cpp  virtual_gearbox_test.cpp
